tdf#100441: Fix listbox state in master vs. normal mode

Events appear in following order:
normal -> master: 1. EID_EDIT_MODE_MASTER, 2. EID_EDIT_VIEW_SELECTION
master -> normal: 1. EID_EDIT_MODE_NORMAL, 2. EID_END_TEXT_EDIT

This is only partial fix, selecting the right master page in other than
normal mode is still broken

Change-Id: I2dd91e77c4ed5627079fc9d2b39e40c8e74a9f8e
Reviewed-on: https://gerrit.libreoffice.org/26484
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>